--- a/views/index.hbs
+++ b/views/index.hbs
@@ -21,20 +21,20 @@
   <div class="row">
     {{!-- EXAMPLE PICTURES --}}
     <div class="col-sm-3">
-      <p>Lorem ipsum</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      
+      <img src="/images/cat1.jpg" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3">
-      <p>Dolor sit amet</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      
+      <img src="/images/jsjoke.jpeg" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3">
-      <p>Consectetur adipisicing elit</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      
+      <img src="/images/cat2.jpg" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3">
-      <p>Consectetur quaerat</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      
+      <img src="/images/jsmeme.jpeg" class="img-responsive" style="width:100%" alt="Image">
     </div>
     {{!-- END EXAMPLE PICTURES --}}
 
@@ -43,7 +43,7 @@
     {{#each memes}}
     <div class="col-sm-3">
       <p>{{this.text}}</p>
-      <img src="{{this.img}}" class="img-responsive" style="width:100%" alt="Image">
+      <img src="{{this.img}}" class="img-responsive" style="width:80px; height: 150px" alt="Image">
     </div>
     {{/each}}
     {{!-- END REAL HBS --}}
