--- a/views/index.hbs
+++ b/views/index.hbs
@@ -23,7 +23,7 @@
     {{#each memes}}
     <div class="col-sm-3">
       <p>{{this.text}}</p>
-      <img src="{{this.img}}" class="img-responsive" style="width:80px; height: 150px" alt="Image">
+      <img src="{{this.img}}" class="img-responsive" style="width:100%" alt="Image">
     </div>
     {{/each}}
     {{!-- END REAL HBS --}}
