--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -20,7 +20,7 @@
             {{#if isLoggedin}}
             <ul class="dropdown nav navbar-nav navbar-right">
                 <li><a href="#" class="dropdown-toggle profile-image" data-toggle="dropdown">
-                    <img src="https://s3.eu-central-1.amazonaws.com/bootstrapbaymisc/blog/24_days_bootstrap/fox.jpg"
+                    <img src="/images/avatar.png"
                         class="img-circle special-img" width="25" height="25" class="rounded-circle"><b
                         class="caret"></b></a>
                 <ul class="dropdown-menu">
